test_files/s_cproc/macro/test_030/e_expect.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro/test_030/i.input:1:17: error: duplicate macro parameter "arg..."
 #define VA(arg, arg...) __VA_ARGS__
                 ^
